--- a/worker/package.json
+++ b/worker/package.json
@@ -20,5 +20,8 @@
 		"typescript": "^5.5.2",
 		"typescript-eslint": "^8.20.0",
 		"wrangler": "^4.26.0"
+	},
+	"dependencies": {
+		"zod": "^4.0.10"
 	}
 }
