--- a/worker/wrangler.jsonc
+++ b/worker/wrangler.jsonc
@@ -10,7 +10,7 @@
 	"migrations": [
 		{
 			"new_sqlite_classes": [
-				"MyDurableObject"
+				"WebSocketHibernationServer"
 			],
 			"tag": "v1"
 		}
@@ -18,8 +18,8 @@
 	"durable_objects": {
 		"bindings": [
 			{
-				"class_name": "MyDurableObject",
-				"name": "MY_DURABLE_OBJECT"
+				"class_name": "WebSocketHibernationServer",
+				"name": "WEBSOCKET_HIBERNATION_SERVER"
 			}
 		]
 	},
