--- a/worker/package.json
+++ b/worker/package.json
@@ -13,6 +13,7 @@
 	"devDependencies": {
 		"@eslint/compat": "^1.2.5",
 		"@eslint/js": "^9.18.0",
+		"drizzle-kit": "^0.31.4",
 		"eslint": "^9.32.0",
 		"eslint-config-prettier": "^10.1.8",
 		"globals": "^16.3.0",
@@ -22,6 +23,8 @@
 		"wrangler": "^4.26.0"
 	},
 	"dependencies": {
+		"@judging.jerryio/web": "workspace:*",
+		"drizzle-orm": "^0.44.4",
 		"zod": "^4.0.10"
 	}
 }
