--- a/wrpc/package.json
+++ b/wrpc/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "format": "prettier --write .",
+    "check": "tsc --noEmit",
     "lint": "prettier --check . && eslint .",
     "test:unit": "vitest",
     "test": "bun run test:unit -- --run"
