--- a/worker/package.json
+++ b/worker/package.json
@@ -23,6 +23,7 @@
 		"wrangler": "^4.26.0"
 	},
 	"dependencies": {
+		"@judging.jerryio/protocol": "workspace:*",
 		"@judging.jerryio/web": "workspace:*",
 		"@judging.jerryio/wrpc": "workspace:*",
 		"drizzle-orm": "^0.44.4",
