--- a/wrpc/package.json
+++ b/wrpc/package.json
@@ -17,7 +17,8 @@
     "eslint-config-prettier": "^10.1.8",
     "prettier": "^3.6.2",
     "typescript": "^5.5.2",
-    "typescript-eslint": "^8.20.0"
+    "typescript-eslint": "^8.20.0",
+		"vitest": "^3.2.3"
   },
   "dependencies": {
     "zod": "^4.0.15"
