--- a/worker/wrangler.jsonc
+++ b/worker/wrangler.jsonc
@@ -7,6 +7,7 @@
 	"name": "judging-jerryio",
 	"main": "src/index.ts",
 	"compatibility_date": "2025-07-26",
+	"compatibility_flags": ["nodejs_compat"],
 	"migrations": [
 		{
 			"new_sqlite_classes": ["WebSocketHibernationServer"],
@@ -21,13 +22,11 @@
 			}
 		]
 	},
-	"compatibility_flags": ["nodejs_compat"],
-	"d1_databases": [
+	"rules": [
 		{
-			"binding": "BINDING_NAME",
-			"database_name": "YOUR_DB_NAME",
-			"database_id": "YOUR_DB_ID",
-			"migrations_dir": "drizzle/migrations"
+			"type": "Text",
+			"globs": ["**/*.sql"],
+			"fallthrough": true
 		}
 	],
 	"observability": {
