--- a/protocol/package.json
+++ b/protocol/package.json
@@ -18,9 +18,10 @@
     "prettier": "^3.6.2",
     "typescript": "^5.5.2",
     "typescript-eslint": "^8.20.0",
-		"vitest": "^3.2.3"
+    "vitest": "^3.2.3"
   },
   "dependencies": {
+    "uuid": "^13.0.0",
     "zod": "^4.0.15"
   }
 }
