--- a/worker/package.json
+++ b/worker/package.json
@@ -8,7 +8,7 @@
 		"start": "wrangler dev",
 		"cf-typegen": "wrangler types",
 		"format": "prettier --write .",
-    "check": "tsc --noEmit",
+		"check": "tsc --noEmit",
 		"lint": "prettier --check . && eslint .",
 		"db:generate": "drizzle-kit generate --name migration",
 		"db:generate-overwrite": "rm -rf drizzle/migrations/meta && rm -rf drizzle/migrations/*.sql && drizzle-kit generate --name migration",
@@ -36,6 +36,7 @@
 		"@judging.jerryio/web": "workspace:*",
 		"@judging.jerryio/wrpc": "workspace:*",
 		"drizzle-orm": "^0.44.4",
+		"robotevents": "^6.0.4",
 		"zod": "^4.0.15"
 	}
 }
