--- a/wrpc/tsconfig.json
+++ b/wrpc/tsconfig.json
@@ -34,7 +34,7 @@
 		"strict": true,
 
 		/* Skip type checking all .d.ts files. */
-		"skipLibCheck": true
+		"skipLibCheck": true,
 
 		// Best practices
 		// "noFallthroughCasesInSwitch": true,
