--- a/web/package.json
+++ b/web/package.json
@@ -54,6 +54,8 @@
 		"qrcode": "^1.5.4",
 		"robotevents": "^6.0.4",
 		"svelte-dnd-action": "^0.9.64",
+		"uuid": "^13.0.0",
+		"xlsx": "^0.18.5",
 		"zod": "^4.0.15"
 	}
 }
