--- a/worker/package.json
+++ b/worker/package.json
@@ -3,10 +3,10 @@
 	"version": "0.0.0",
 	"private": true,
 	"scripts": {
-		"deploy": "wrangler deploy",
-		"dev": "wrangler dev",
-		"start": "wrangler dev",
-		"cf-typegen": "wrangler types",
+		"deploy": "wrangler deploy --env production",
+		"dev": "wrangler dev --env development",
+		"start": "wrangler dev --env development",
+		"cf-typegen": "wrangler types --env development",
 		"format": "prettier --write .",
 		"check": "tsc --noEmit",
 		"lint": "prettier --check . && eslint .",
