Use new project name: judgesroom.com

--- a/protocol/package.json
+++ b/protocol/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@judging.jerryio/protocol",
+  "name": "@judgesroom.com/protocol",
   "version": "0.0.0",
   "private": true,
   "type": "module",
