--- a/wrpc/package.json
+++ b/wrpc/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@judging.jerryio/wrpc",
+  "name": "@judgesroom.com/wrpc",
   "version": "0.0.0",
   "private": true,
   "type": "module",
