--- a/web/package.json
+++ b/web/package.json
@@ -50,6 +50,7 @@
 		"@judgesroom.com/protocol": "workspace:*",
 		"@judgesroom.com/wrpc": "workspace:*",
 		"crypto-js": "^4.2.0",
+		"dompurify": "^3.3.1",
 		"events": "^3.3.0",
 		"papaparse": "^5.5.3",
 		"qrcode": "^1.5.4",
